<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoWithLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reg">Registration</string>
    <string name="retrive">Retrieve</string>
    <string name="photo">Take Photo</string>
    <string name="save">save</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="remark">Remark</string>
    <string name="title">Display in List</string>
    <string name="insert">Data inserted</string>
    <string name="fail">insertion failed</string>

</resources>
