<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/btnphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg" />

</LinearLayout>